apps/base/redlib/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redlib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redlib
  template:
    metadata:
      labels:
        app: redlib
        app.kubernetes.io/name: redlib
    spec:
      containers:
        - name: redlib
          image: "quay.io/redlib/redlib:latest@sha256:e6647a94d553bf3f7c95c53fc6d9da5785e6c278d9002e99ea32abdb5e3c513a"
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsUser: 65534
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
